fix spacing

--- a/public/style.css
+++ b/public/style.css
@@ -57,6 +57,7 @@ h1{
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    text-align: center;
     padding-left: 15%;
     padding-right: 15%;
 }
@@ -64,4 +65,13 @@ a{
     justify-content: center;
     font-size: 30px
 
+}
+.contact{
+    display: flex;
+
+}
+.titleC{
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
